# sar-push-service

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
client/: Cargo.toml
client/src/: access.rs  auth.rs  error.rs  helper.rs  main.rs  notify.rs  service.rs
docs/: README.md  access.md  index.md  notify.md  services.md
smtp/: .gitignore  Cargo.toml
smtp/src/: auth.rs  buffer.rs  command.rs  error.rs  extension.rs  lib.rs  mail.rs  mime.rs  reply.rs  smtp.rs  utils.rs
src/: main.rs  utils.rs
src/controller/: access.rs  access_check.rs  extractor.rs  mod.rs  notify.rs  responder.rs  service.rs
src/middleware/: access_check.rs  auth.rs  error_format.rs  func_middleware.rs  mod.rs  service_guard.rs
src/model/: access.rs  error.rs  init.rs  mod.rs  notify.rs  profile.rs  service.rs
src/service/: email_notify.rs  mod.rs
src/test/: helper.rs  mod.rs  test_access_service.rs  test_auth.rs  test_notify.rs  test_service.rs
