[package]
name = "sar-notify"
version = "0.1.0"
authors = ["SardineFish <Sardine@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.0"
mongodb = "1.1.1"
serde = "1.0.117"
tokio = { version = "0.3.4", features = ["stream"] }
futures-util = "0.3.8"
futures = "0.3.8"
env_logger = "0.8.2"
log = "0.4.11"