[package]
name = "sar-notify"
version = "0.1.0"
authors = ["SardineFish <Sardine@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.0"
actix-web-httpauth = "0.5.0"
mongodb = "1.1.1"
serde = "1.0.117"
tokio = { version = "0.3.4", features = ["stream"] }
futures-util = "0.3.8"
futures = "0.3.8"
env_logger = "0.8.2"
log = "0.4.11"
clap = "3.0.0-beta.2"
openssl = { version = "0.10.30"}
hex = "0.4.2"

[dev-dependencies]
actix-rt = "1.1.1"
actix-http = "2.2.0"