[package]
name = "client"
version = "0.1.0"
authors = ["SardineFish <Sardine@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.9", features = ["json"] }
clap = "3.0.0-beta.2"
serde = { version = "1.0.118", features = ["derive"]}
serde_json = "1.0.60"
serde_yaml = "0.8.14"
tokio = { version = "0.2", features = ["macros"] }
