[package]
name = "smtp"
version = "0.1.0"
authors = ["SardineFish <Sardine@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bytes = "0.6.0"
chrono = "0.4.19"
uuid = { version = "0.8.1", features = [ "v4" ] }